# product-catalog-backend

./: alembic.ini  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 425aa4ce7399_initial_migration.py
app/: celery_app.py  create_tables.py  database.py  main.py
app/models/: product.py
app/routes/: auth.py
app/schemas/: product.py
app/tasks/: tasks.py
app/utils/: authentication.py
